--- a/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/AdventOfCode2023/AdventOfCode2023.csproj
@@ -9,10 +9,14 @@
 
   <ItemGroup>
     <None Remove="InputFiles\AOC_input_2023-01.txt" />
+    <None Remove="InputFiles\AOC_input_2023-02.txt" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="InputFiles\AOC_input_2023-01.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="InputFiles\AOC_input_2023-02.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
