Solved first puzzle of day 6

--- a/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/AdventOfCode2023/AdventOfCode2023.csproj
@@ -12,8 +12,8 @@
     <None Remove="InputFiles\AOC_input_2023-02.txt" />
     <None Remove="InputFiles\AOC_input_2023-03.txt" />
     <None Remove="InputFiles\AOC_input_2023-04.txt" />
-    <None Remove="InputFiles\AOC_input_2023-05 - Copy.txt" />
     <None Remove="InputFiles\AOC_input_2023-05.txt" />
+    <None Remove="InputFiles\AOC_input_2023-06.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,7 +29,7 @@
     <Content Include="InputFiles\AOC_input_2023-03.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="InputFiles\AOC_input_2023-05 - Copy.txt">
+    <Content Include="InputFiles\AOC_input_2023-06.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="InputFiles\AOC_input_2023-05.txt">
