Solved first puzzle of day 8

--- a/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/AdventOfCode2023/AdventOfCode2023.csproj
@@ -15,6 +15,7 @@
     <None Remove="InputFiles\AOC_input_2023-05.txt" />
     <None Remove="InputFiles\AOC_input_2023-06.txt" />
     <None Remove="InputFiles\AOC_input_2023-07.txt" />
+    <None Remove="InputFiles\AOC_input_2023-08.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,6 +29,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="InputFiles\AOC_input_2023-03.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="InputFiles\AOC_input_2023-08.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="InputFiles\AOC_input_2023-07.txt">
