Solved first puzzle of day 12

--- a/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/AdventOfCode2023/AdventOfCode2023.csproj
@@ -19,6 +19,7 @@
     <None Remove="InputFiles\AOC_input_2023-09.txt" />
     <None Remove="InputFiles\AOC_input_2023-10.txt" />
     <None Remove="InputFiles\AOC_input_2023-11.txt" />
+    <None Remove="InputFiles\AOC_input_2023-12.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,6 +33,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="InputFiles\AOC_input_2023-03.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="InputFiles\AOC_input_2023-12.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="InputFiles\AOC_input_2023-11.txt">
