--- a/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/AdventOfCode2023/AdventOfCode2023.csproj
@@ -21,6 +21,7 @@
     <None Remove="InputFiles\AOC_input_2023-11.txt" />
     <None Remove="InputFiles\AOC_input_2023-12.txt" />
     <None Remove="InputFiles\AOC_input_2023-13.txt" />
+    <None Remove="InputFiles\AOC_input_2023-14.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,6 +35,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="InputFiles\AOC_input_2023-03.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="InputFiles\AOC_input_2023-14.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="InputFiles\AOC_input_2023-13.txt">
