--- a/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/AdventOfCode2023/AdventOfCode2023.csproj
@@ -24,9 +24,13 @@
     <None Remove="InputFiles\AOC_input_2023-13.txt" />
     <None Remove="InputFiles\AOC_input_2023-14.txt" />
     <None Remove="InputFiles\AOC_input_2023-15.txt" />
+    <None Remove="InputFiles\AOC_input_2023-16.txt" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="InputFiles\AOC_input_2023-16.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="InputFiles\AOC_input_2023-01.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
