--- a/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/AdventOfCode2023/AdventOfCode2023.csproj
@@ -28,9 +28,13 @@
     <None Remove="InputFiles\AOC_input_2023-17.txt" />
     <None Remove="InputFiles\AOC_input_2023-18.txt" />
     <None Remove="InputFiles\AOC_input_2023-19.txt" />
+    <None Remove="InputFiles\AOC_input_2023-20.txt" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="InputFiles\AOC_input_2023-20.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="InputFiles\AOC_input_2023-19.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
